--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
     <h1>Protein Meal Prep</h1>
+    <img src="images/muscle-gain.jpeg" height="350" width="400">
     <ul>
-        <a href="recipes/lasagna.html"> Recipie lasagna</a>
-        <a href=" "> Recipie Mac and Cheese</a>
-        <A href=""> Recipie </A>
+        <p><a href="recipes/naked-chicken-burrito.html"> Recipie Naked chicken Burrito Bowl</a></p>
+        <p><a href="recipes/zingy-chicken-burger.html"> Recipie Ziger Burger Bowl</a></p>
+        <p><A href="recipes/creamy-cajun-chicken-pasta.html"> Recipie Creamy Cajun Chicken Pasta</A></p>
+    </ul>
 </body>
 </html>
